--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=maverickshub
 spring.datasource.url=jdbc:postgresql://localhost/hub_db
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.config.import=secrets.properties
